# Guji

./: .gitignore  CMakeLists.txt  README.md  log.txt  main.c
client/: CMakeLists.txt  frag.spv  vert.spv
client/include/: renderer.h
client/src/: renderer.c  test.c
client/src/shader/: shader.frag  shader.vert
client/test/: CMakeLists.txt  test.c
engine/: README.md
engine/source/runtime/: engine.c  engine.h
engine/source/runtime/function/render/: .window_system.c.swp  .window_system.h.swp  frag.spv  renderer.c  renderer.h  vert.spv  vulkanAPI.c  vulkanAPI.h  window_system.c  window_system.h
engine/source/runtime/function/render/shader/: shader.frag  shader.vert
