cmake_minimum_required(VERSION 3.0)
project(guji)
file(GLOB_RECURSE SRC_LIST "*.c" EXCLUDE "engine/dependencies/*")
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_include_directories(${PROJECT_NAME} PRIVATE engine/source/runtime)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(engine/dependencies/glfw)
target_link_libraries(guji glfw)
get_target_property(TARGET_INCLUDES ${PROJECT_NAME} INCLUDE_DIRECTORIES)
message("include_dir=${TARGET_INCLUDES}")
