cmake_minimum_required(VERSION 3.0)
project(guji)
add_executable(${PROJECT_NAME} main.c engine/source/runtime/engine.c engine/source/runtime/function/render/window_system.c)
target_include_directories(${PROJECT_NAME} PRIVATE engine/source/runtime engine/dependencies/VulkanSDK/include)
add_subdirectory(engine/dependencies/glfw)
link_libraries(engine/dependencies/VulkanSDK/lib/Linux/libvulkan.so.1)
target_link_libraries(guji glfw vulkan)
get_target_property(TARGET_INCLUDES ${PROJECT_NAME} INCLUDE_DIRECTORIES)
message("include_dir=${TARGET_INCLUDES}")
