cmake_minimum_required(VERSION 3.0)
project(guji)
set(CMAKE_C_STANDARD 99)
set(SRC_LIST main.c engine/source/runtime/engine.c engine/source/runtime/function/render/window_system.c engine/source/runtime/function/render/vulkanAPI.c)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_include_directories(${PROJECT_NAME} PRIVATE engine/source/runtime engine/dependencies/VulkanSDK/include)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(engine/dependencies/glfw)
link_libraries(engine/dependencies/VulkanSDK/lib/Linux/libvulkan.so.1)
target_link_libraries(guji glfw vulkan)
get_target_property(TARGET_INCLUDES ${PROJECT_NAME} INCLUDE_DIRECTORIES)
message("include_dir=${TARGET_INCLUDES}")
message("src_list=${SRC_LIST}")
