cmake_minimum_required(VERSION 3.15)
project(guji C)
find_package(Vulkan REQUIRED)
list(APPEND CMAKE_PREFIX_PATH J:/newGame/VulkanSDK/1.3.211.0/cmake)
find_package(SDL2 REQUIRED)
find_program(GLSLC_PROGRAM glslc REQUIRED)
aux_source_directory(src SRC)
add_executable(guji ${SRC})
target_include_directories(guji PUBLIC include ${SDL2_INCLUDE_DIRS})
target_compile_features(guji PUBLIC c_std_99)
target_link_libraries(guji PUBLIC Vulkan::Vulkan ${SDL2_LIBRARIES})